[package]
name = "clutch"
version = "0.1.0"
authors = ["Steve Flanagan <stevemflanagan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
panic = 'abort'

[profile.release]
#debug = false
#debug-assertions = false
# lto does help but not by much with pcre2
lto = true
codegen-units=1
opt-level = 3
panic = 'abort'  # does cleanup upon panics
#trustflags = ["-C", ""]
#trustflags = ["-C", "target-cpu=native,inline-threshold=0"]
trustflags = ["-C", "target-cpu=native"]
#trustflags = ["-C", "inline-threshold=0"]


[[bin]]
name = "clutch"
path = "src/main.rs"

[[bin]]
name = "quicky"
path = "src/quicky.rs"

[target.'cfg(unix)'.dependencies]
jemallocator = "0.3.2"
jemalloc-ctl = "0.3.3"

[dependencies]
nohash-hasher = "0.2.0"
fnv = "1.0.7"
bit-vec = "0.6"
num="0.2.0"
snafu = "0.6.8"
anyhow = "1.0.31"
num-format = "0.4.0"
num-traits = "0.2.12"
backtrace = "0.3.49"
color-backtrace = "0.4.2"
structopt = "0.3.15"
crossbeam = "0.7.3"
chrono = "0.4.12"
cpu-time = "1.0.0"
t1ha = "0.1.0"